--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,12 @@ li {
 	list-style: none;
 }
 
+.board {
+	display: grid;
+    grid-template-columns: repeat(10, 35px);
+    grid-template-rows: repeat(10, 35px);
+}
+
 .board-layout {
 	display: flex;
 	justify-content: space-evenly;
@@ -71,46 +77,4 @@ li {
 
 .hit {
 	background-color: red;
-}
-
-.hits {
-	background-color: orange;
-}
-
-.logs {
-	display: flex;
-	flex-direction: column;
-}
-
-.game-info {
-	display: flex;
-	justify-content: center;
-}
-
-.game-info > div {
-	width: 50%;
-}
-
-.sunk-log {
-	text-align: center;
-}
-
-.sunk {
-	display: flex;
-	justify-content: space-between;
-	text-align: center;
-}
-
-.sunk > div {
-	width: 50%;
-}
-
-.sunk-ships {
-	display: flex;
-	justify-content: center;
-	flex-direction: column;
-}
-
-.sunk-log > h3 {
-	margin-bottom: 0;
 }
