--- a/src/Css/Navbar.css
+++ b/src/Css/Navbar.css
@@ -1,16 +1,15 @@
-/* .navbarContainer{
+.navbarContainer{
     display: flex;
     width: 100vw;
     gap: 50px;
     align-items: center;
     justify-content: center;
     flex-direction: row;
-    background-color: darkcyan;
     font-weight: bold;
-    font-size: 20px;
-    height: 2em;
+    font-size: 15px;
+    height: 4vw;
 }
 
 a {
     color: black;
-} */
+}
