commit for deploy to heroku

--- a/src/Css/Navbar.css
+++ b/src/Css/Navbar.css
@@ -27,7 +27,7 @@ ul {
 
 @media screen and (max-width: 800px){
     ul {
-        width: 200px;
+        width: 100vw;
         list-style-type: none;
         margin: 0;
         padding: 0;
