--- a/src/Css/WelcomePage.css
+++ b/src/Css/WelcomePage.css
@@ -27,7 +27,7 @@ h1 {
     z-index: 5;
     padding: 2%;
     color: white;
-    font-size: small;
+    font-size:large;
     font-family:'Courier New', Courier, monospace;
     font-weight: bolder;
     text-align: left;
